--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         body {
             display: flex;
+            height: 100vh;
             flex-direction: column;
             align-items: center;
             justify-content: center;
