--- a/index.html
+++ b/index.html
@@ -10,35 +10,46 @@
     <style>
         body {
             display: flex;
-            height: 100vh;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             overflow: hidden;
-            background-color: rgb(46, 46, 46);
+            background-color: rgb(31, 31, 31);
+            height: 100vh;
+            font-size: large;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        
+        .tv{
+            position: absolute;
+            background-image: url('/tv.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 100vw;
+            height: 100vh;
+            z-index: 90;
         }
 
         a {
-            padding: 10px;
-            background-color: rgb(255, 81, 0);
+            background-color: rgb(34, 115, 161);
             color: black;
             text-decoration: none;
+            text-align: center;
             border-radius: 6px;
             padding: 20px 60px;
+            transition: 350ms;
         }
 
         a:hover {
-            background-color: rgba(255, 81, 0, 0.726);
+            background-color: rgb(66, 171, 231);
             cursor: pointer;
         }
 
         video {
-            width: 800px;
-            height: 600px;
+            width: 1200px;
+            height: 1020px;
             border-radius: 30px;
-            border: 3px dashed rgb(255, 81, 0);
-            margin-bottom: 50px;
-            
+            border: 3px dashed rgb(66, 171, 231);
+            background-color: rgb(14, 14, 14);
         }
 
         canvas {
@@ -46,18 +57,21 @@
         }
 
         .buttons {
+            z-index: 100;
             display: flex;
+            margin-left: 40px;
+            height: 70vh;
+            flex-direction: column;
             background-color: rgb(46, 46, 46);
-            width: 900px;
             padding: 20px;
             justify-content: space-around;
-            border-radius: 60px;
-            box-shadow: 10px 10px 60px rgb(0, 0, 0);
+            box-shadow: inset 8px 8px 30px rgb(0, 0, 0);
         }
     </style>
 </head>
 
 <body>
+    <div class="tv"></div>
     <video id="webcam" autoplay playsinline></video>
     <canvas id="canvas"></canvas>
     <div class="buttons">
