--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         .tv{
             position: absolute;
-            background-image: url('/tv.png');
+            background-image: url('Webcam/tv.png');
             background-repeat: no-repeat;
             background-size: cover;
             width: 100vw;
